--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+
 body {
     margin: 0;
     padding: 0;
@@ -8,22 +12,27 @@ body {
     margin-top: 50px;
 }
 
-/* -------------------- Game icons --------- */
+/* -------------------- Banner --------- */
 .banner {
     text-align: center;
     height: 300px;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 body .banner h1 {
     font-size: 80px;
     color: beige;
+    font-family: "Bungee Shade", sans-serif ;
 }
 
 body .banner p {
+    margin-top: 40px;
     font-size: 40px;
     color: bisque;
+    font-family: "Indie Flower", sans-serif ;
 }
+
+/* -------------------- Game icons --------- */
 
 .game-icon {
     
@@ -32,7 +41,8 @@ body .banner p {
     max-width: 300px;
     height: 300px;
     margin: 10px;
-
+    font-family: "Bungee", sans-serif ;
+    font-weight: 700;
 }
 
 .hover {
