--- a/assets/css/memory.css
+++ b/assets/css/memory.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 body {
+    margin: 0;
+    padding: 20px;
     background: url("/assets/img/snake-background.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -18,10 +24,10 @@ body {
     background-color: beige;
     border: 2px solid black;
     border-radius: 5%;
-    font-family: "Bungee", sans-serif ;
+    font-family: "Bungee", sans-serif;
     text-align: center;
     margin: 10px 0px 10px 0px;
-   
+
 }
 
 .back-to-home p {
@@ -42,3 +48,90 @@ body {
     padding-top: 180px;
 
 }
+
+/* --------- Memory Game ------------- */
+
+/* --------- heading -------------------*/
+
+.page-title {
+    color: grey;
+    font-size: 6em;
+}
+
+.game-info {
+    font-size: 4em;
+    color: grey;
+}
+
+
+/* --------- Cards -------------------*/
+
+.game-info-container {
+    grid-column: 1 / -1;
+    display: flex;
+    justify-content: space-between;
+}
+
+.card {
+    position: relative;
+    
+    height: 175px;
+    width: 125px;
+}
+
+.game-container {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-gap: 10px;
+    margin: 50px;
+    justify-content: center;
+    perspective: 500px;
+
+}
+
+.card-face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    backface-visibility: hidden;
+    border-radius: 12px;
+    border: 1px solid orange;
+    transition: transform 500ms ease-in-out;
+}
+
+
+.card.visable .card-back {
+    transform: rotateY(-180deg);
+    width: 125px;
+    height: 175px;
+}
+
+.card.visable .card-front {
+    transform: rotateY(0);
+    width: 125px;
+    height: 175px;
+    
+}
+
+.card-back {
+    background-color: black;
+    border-color: orange;
+    
+}
+
+
+.card-front {
+    transform: rotateY(180deg);
+    overflow: hidden;
+    
+}
+
+.card-front img {
+    overflow: hidden;
+    
+}
+
