--- a/assets/css/memory.css
+++ b/assets/css/memory.css
@@ -56,6 +56,7 @@ body {
 .page-title {
     color: grey;
     font-size: 6em;
+    text-align: center;
 }
 
 .game-info {
@@ -89,10 +90,14 @@ body {
 
 }
 
+.card:hover {
+    cursor: pointer;
+}
+
 .card-face {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 125px;
+    height: 175px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -103,14 +108,52 @@ body {
     transition: transform 500ms ease-in-out;
 }
 
+.overlay-text {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    color: hotpink;
+}
 
-.card.visable .card-back {
+.overlay-text-small {
+    font-size: .3em;
+}
+
+
+
+.overlay-text.visible {
+    display: flex;
+    flex-direction: column;
+    animation: overlay-grow 500ms forwards;
+}
+
+@keyframes overlay-grow {
+    from {
+        background-color: rgba(0, 0, 0, 0);
+        font-size: 0;
+    }
+    to {
+        background-color: rgba(0, 0, 0, .8);
+        font-size: 10em;
+    }
+}
+    
+
+
+
+.visible .card-back {
     transform: rotateY(-180deg);
     width: 125px;
     height: 175px;
 }
 
-.card.visable .card-front {
+.visible .card-front {
     transform: rotateY(0);
     width: 125px;
     height: 175px;
@@ -135,3 +178,32 @@ body {
     
 }
 
+.card-match .card-value {
+    animation: dance 1s linear infinite 500ms;
+}
+
+@keyframes dance {
+    0%, 100% {
+        transform: rotateY(0)
+    }
+    25% {
+        transform: rotateY(-30deg);
+    }
+    75% {
+        transform: rotate(30deg);
+    }
+}
+
+/*-------  media query -------*/
+
+@media (max-width: 600px) {
+    .game-container {
+        grid-template-columns: repeat(2, auto);
+
+    }
+
+    .game-info-container {
+        flex-direction: column;
+        align-items: center;
+    }
+}
