--- a/assets/css/memory.css
+++ b/assets/css/memory.css
@@ -132,11 +132,6 @@ body {
 
 
 
-.overlay-text.visible {
-    display: flex;
-    flex-direction: column;
-    animation: overlay-grow 500ms forwards;
-}
 
 @keyframes overlay-grow {
     from {
@@ -183,9 +178,7 @@ body {
     
 }
 
-.card-match .card-value {
-    animation: dance 1s linear infinite 500ms;
-}
+
 
 /* ---------------- Overlays ---------------*/
 
@@ -213,17 +206,17 @@ body {
     
 }
 
-@keyframes dance {
-    0%, 100% {
-        transform: rotateY(0)
-    }
-    25% {
-        transform: rotateY(-30deg);
-    }
-    75% {
-        transform: rotate(30deg);
-    }
+.overlay-text.visible {
+    display: flex;
+    flex-direction: column;
+    animation: overlay-grow 500ms forwards;
 }
+
+.overlay-text-small i {
+    color: yellow;
+    font-size: 3em;
+}
+
 
 /*-------  media query -------*/
 
