--- a/assets/css/memory.css
+++ b/assets/css/memory.css
@@ -27,8 +27,25 @@ body {
     background-size: cover;
 }
 
-.blank-space {
-    height: 400px;
+.audio-button {
+   width: 300px;
+   height: auto;
+   background-color: rgba(0, 0, 0, .4);
+   color: #41cb2c;
+   text-align: center;
+   border-radius: 12px;
+   padding: 10px;
+}
+
+.audio-button i {
+    
+    font-size: 50px;
+
+}
+
+.audio-button i:hover {
+    transform: scale(1.3);
+    cursor: pointer;
 }
 
 .back-to-home {
