--- a/assets/css/memory.css
+++ b/assets/css/memory.css
@@ -27,11 +27,8 @@ body {
     background-size: cover;
 }
 
-
-
 /*--------- Control buttons ---------*/
-
-.control-container{
+.control-container {
     width: 100%;
     height: auto;
     background-color: rgba(0, 0, 0, .8);
@@ -59,6 +56,7 @@ body {
 .restart-icon {
     margin: 0px 0px 0px 30px;
 }
+
 .restart-icon i {
     font-size: 40px;
     padding-top: 5px;
@@ -70,7 +68,6 @@ body {
 }
 
 /* --------- Memory Game ------------- */
-
 /* --------- heading -------------------*/
 .page-title {
     color: #BD8025;
@@ -88,7 +85,7 @@ body {
 .game-info h2 {
     font-size: 1em;
     color: #28b213;
-    text-shadow: 2px 2px black;   
+    text-shadow: 2px 2px black;
 }
 
 .game-info h2 span {
@@ -241,8 +238,7 @@ div.card {
     }
 }
 
-/*-------  media query -------*/
-
+/*-------  Footer -------*/
 footer {
     text-align: center;
     position: fixed;
@@ -251,7 +247,6 @@ footer {
     width: 100%;
     height: auto;
     padding-top: 5px;
-    
 }
 
 footer i {
