--- a/assets/css/memory.css
+++ b/assets/css/memory.css
@@ -114,7 +114,7 @@ div.card {
 
 .game-container {
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(6, auto);
     grid-gap: 10px;
     margin: 50px;
     justify-content: center;
@@ -203,7 +203,7 @@ div.card {
 }
 
 .overlay-text h1 {
-    font-size: 1em;
+    font-size: 75px;
 }
 
 .overlay-text-small {
@@ -222,7 +222,7 @@ div.card {
 
 .overlay-text-small i {
     color: yellow;
-    font-size: 3em;
+    font-size: 45px;
 }
 
 /*-------  media query -------*/
@@ -249,12 +249,13 @@ div.card {
 /*-------  Footer -------*/
 footer {
     text-align: center;
-    position: fixed;
+    position: relative;
     bottom: 0px;
     background-color: rgba(0, 0, 0, .8);
     width: 100%;
     height: auto;
     padding-top: 5px;
+    margin-top: 20px;
 }
 
 footer i {
