--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,18 +38,19 @@ body {
     background-color: rgba(0, 0, 0, .8);
     color: #28b213;
     text-align: center;
-    padding: 10px;
+    padding: 0;
     margin-left: 0px;
     margin-top: 0px;
 }
 
 .music-icon i {
     font-size: 50px;
+    padding: 0 0 5px 0;
 }
 
 .music-icon i:hover {
-    transform: scale(1.3);
-    -webkit-transform: scale(1.3);
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
     cursor: pointer;
     color: #BD8025;
 }
@@ -64,28 +65,31 @@ body {
 
 .restart-icon i {
     font-size: 40px;
-    padding-top: 5px;
+    padding: 5px 0 2px 0;
 }
 
 .restart-icon i:hover {
     color: #BD8025;
-    transform: scale(1.3);
-    -webkit-transform: scale(1.3);
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
 }
 
 /* --------- Memory Game ------------- */
 /* --------- heading -------------------*/
 .page-title {
     color: #BD8025;
-    font-size: 6em;
+    font-size: 5em;
     text-align: center;
     text-shadow: 2px 2px black;
+    margin-bottom: 0px;
+    padding-bottom: 0;
 }
 
 .game-info {
     font-size: 4em;
     color: #28b213;
     text-shadow: 2px 2px black;
+    margin-top: 10px;
 }
 
 .game-info h2 {
@@ -105,6 +109,8 @@ body {
     justify-content: space-between;
     user-select: none;
     -moz-user-select: none;
+    padding-top: 2px;
+    margin-top: 0;
 }
 
 .card {
@@ -126,6 +132,7 @@ div.card {
     grid-template-columns: repeat(6, auto);
     grid-gap: 10px;
     margin: 50px;
+    margin-top: 0;
     justify-content: center;
     perspective: 500px;
 }
