--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@ body {
     transform: scale(1.2);
     -webkit-transform: scale(1.2);
 }
+
 /* --------- Scoreboarde ------------- */
 
 .scoreboard {
@@ -110,16 +111,17 @@ body {
     font-size: 40px;
 }
 
-
+.last-score-view {
+    position: fixed;
+    top: 30px;
+    left: 20px;
+    display: none;
+}
 
 
 /* --------- Memory Game ------------- */
 
 /* --------- Welcome Modal -------------------*/
-.modal {
-    position: absolute;
-    top: 20vh;
-}
 
 .modal-header {
 
@@ -210,7 +212,7 @@ body {
 }
 
 .game-info {
-    font-size: 4em;
+    font-size: 3em;
     color: #28b213;
     text-shadow: 2px 2px black;
     margin-top: 20px;
@@ -220,10 +222,12 @@ body {
     text-align: center;
     padding: 5px;
     box-shadow: 5px 5px black;
+    width: 18vh;
+    height: auto;
 }
 
 .game-info h2 {
-    font-size: 1em;
+    font-size: .8em;
     color: #28b213;
     text-shadow: 2px 2px black;
 }
@@ -353,9 +357,11 @@ div.card {
     padding: 20px;
     border-radius: 12px;
 }
+
 .overlay-text i {
     color: #fafafa;
 }
+
 .overlay-text h1 {
     font-size: 75px;
 }
@@ -450,6 +456,12 @@ div.card {
     .card-front {
         width: 75px;
         height: 125px;
+    }
+}
+
+@media (max-width: 1458px) {
+    .scoreboard {
+        display: none;
     }
 }
 
