--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,8 +87,10 @@ body.modal-open {
 
 .scoreboard {
     text-align: center;
-    width: 300px;
-    height: 375px;
+    min-width: 300px;
+    width: auto;
+    min-height: 375px;
+    height: auto ;
     border: 5px solid orange;
     background-color: rgba(0, 0, 0, .9);
     border-radius: 12px;
@@ -96,6 +98,7 @@ body.modal-open {
     left: 20px;
     top: 248px;
     padding: 5px;
+    pointer-events: auto;
 }
 
 .scoreboard h5 {
@@ -115,7 +118,7 @@ body.modal-open {
 }
 
 .score-text li {
-    font-size: 40px;
+    font-size: 30px;
 }
 
 .last-score-view {
@@ -124,6 +127,8 @@ body.modal-open {
     left: 20px;
     display: none;
 }
+
+
 
 
 /* --------- Memory Game ------------- */
