--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,23 +38,25 @@ body.modal-open {
     pointer-events: none;
 }
 
-
-
 /*--------- Control buttons ---------*/
 .control-container {
     width: 100%;
     height: auto;
-    background-color: rgba(0, 0, 0, .8);
-    color: #28b213;
+    color: orange;
     text-align: center;
     padding: 0;
-    margin-left: 0px;
-    margin-top: 0px;
+    background-color: rgba(0, 0, 0, .8);
+}
+
+.control-container h4 {
+    font-family: "Monda", sans-serif;
+    text-decoration: underline;
 }
 
 .music-icon i {
-    font-size: 50px;
+    font-size: 40px;
     padding: 0 0 5px 0;
+    color: #28b213;
 }
 
 .music-icon i:hover {
@@ -75,6 +77,7 @@ body.modal-open {
 .restart-icon i {
     font-size: 40px;
     padding: 5px 0 2px 0;
+    color:#28b213;
 }
 
 .restart-icon i:hover {
@@ -201,42 +204,41 @@ body.modal-open {
     background-color: #d70040;
 }
 
-
-
 /* --------- heading -------------------*/
 .page-title {
     color: #BD8025;
-    font-size: 5em;
+    font-size: 3em;
     text-align: center;
     text-shadow: 2px 2px black;
-    margin-top: 30px;
-    margin-bottom: 10px;
-    padding-bottom: 0;
-
+    padding: 10px;
+    margin-top: 5px;
 }
 
 .page-title-box {
     border: 5px solid orange;
     background-color: rgba(0, 0, 0, .8);
     margin-top: 10px;
-    padding: 10px;
+    padding: 5px;
     border-radius: 12px;
     box-shadow: 5px 5px black;
+    width: fit-content;
+    height: auto;
 }
 
 .game-info {
-    font-size: 3em;
+    font-size: 2em;
     color: #28b213;
     text-shadow: 2px 2px black;
-    margin-top: 20px;
+    margin-top: 5px;
     border: 2px solid orange;
     border-radius: 12px;
     background-color: rgba(0, 0, 0, .8);
     text-align: center;
     padding: 5px;
     box-shadow: 5px 5px black;
-    width: 16vw;
+    max-width: 16vw;
     height: auto;
+    min-width: fit-content;
 }
 
 .game-info h2 {
@@ -244,8 +246,6 @@ body.modal-open {
     color: #28b213;
     text-shadow: 2px 2px black;
 }
-
-
 
 /* --------- Cards -------------------*/
 .game-info-container {
@@ -405,7 +405,6 @@ div.card {
 @media only screen and (min-width: 401px) and (max-width: 900px) {
     .game-container {
         grid-template-columns: repeat(4, auto);
-
     }
 
     .game-info-container {
@@ -424,7 +423,6 @@ div.card {
     .game-info {
         width: auto;
     }
-
 }
 
 @media (max-width: 400px) {
@@ -493,6 +491,27 @@ div.card {
 @media (max-width: 1458px) {
     .scoreboard {
         display: none;
+    }
+}
+
+@media (max-width: 585px) {
+    .page-title-box {
+        border: none;
+        background: none;
+        box-shadow: none;
+    }
+    .music-icon {
+        margin: 0;
+        padding: 5px;
+        font-size: 20px;
+    }
+    .restart-icon {
+        margin: 0;
+        padding: 5px;
+        font-size: 20px;
+    }
+    .page-title {
+        font-size: 30px;
     }
 }
 
